
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gris"
authors = [
{ name="Angel Yanguas-Gil"}]
version = "0.9.0"
description = "Parser of RIS file format"
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["RIS file format", "RefMan RIS", "bibliography", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/anglyan/gris.git"
"docs" = "https://gris.readthedocs.io/en/latest/index.html"

[project.optional-dependencies]
testing = ["pytest"]

